
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int SID_IDENTIFIER_AUTHORITY ;
typedef int * PSID ;
typedef int * PACL ;


 int AllocateAndInitializeSid (int *,int,int ,int ,int ,int ,int ,int ,int ,int ,int **) ;
 int DACL_SECURITY_INFORMATION ;
 int DOMAIN_ALIAS_RID_ADMINS ;
 scalar_t__ ERROR_SUCCESS ;
 int ExitProcess (int) ;
 int FreeSid (int *) ;
 int GetLastError () ;
 scalar_t__ GetNamedSecurityInfo (char*,int ,int,int *,int *,int **,int *,int *) ;
 int MSIEXECKEY ;
 int OWNER_SECURITY_INFORMATION ;
 int SECURITY_BUILTIN_DOMAIN_RID ;
 int SECURITY_NT_AUTHORITY ;
 int SE_REGISTRY_KEY ;
 scalar_t__ SetNamedSecurityInfo (int ,int ,int,int *,int *,int *,int *) ;
 int UNPROTECTED_DACL_SECURITY_INFORMATION ;
 int WriteToRegistry (char*) ;
 int printf (char*,...) ;

int RestorePermissions()
{
     PACL pOldDACL = ((void*)0);
     PSID pSIDAdmin = ((void*)0);
     SID_IDENTIFIER_AUTHORITY SIDAuthNT = SECURITY_NT_AUTHORITY;



     printf("\n[*] Restoring all permissions and value");



     WriteToRegistry("%systemroot%\\system32\\msiexec.exe /V");



     if (!AllocateAndInitializeSid(&SIDAuthNT, 2, SECURITY_BUILTIN_DOMAIN_RID, DOMAIN_ALIAS_RID_ADMINS, 0, 0, 0, 0, 0, 0, &pSIDAdmin))
     {
         printf("\nAllocateAndInitializeSid failed %d\n\n", GetLastError());
         ExitProcess(1);
     }



     if (SetNamedSecurityInfo(MSIEXECKEY, SE_REGISTRY_KEY, OWNER_SECURITY_INFORMATION, pSIDAdmin, ((void*)0), ((void*)0), ((void*)0)) != ERROR_SUCCESS)
     {
         printf("\n[-] Failed to restore the object's ownership %d\n\n", GetLastError());
         ExitProcess(1);
     }
     printf("\n[+] Object's ownership successfully restored");



     if (GetNamedSecurityInfo("MACHINE\\SYSTEM\\CurrentControlSet\\Services", SE_REGISTRY_KEY, DACL_SECURITY_INFORMATION, ((void*)0), ((void*)0), &pOldDACL, ((void*)0), ((void*)0)) != ERROR_SUCCESS)
     {
         printf("\n[-] Failed to copy parent key object's DACL %d\n\n", GetLastError());
         ExitProcess(1);
     }
     printf("\n[+] Parent key object's DACL successfully saved");



     if (SetNamedSecurityInfo(MSIEXECKEY, SE_REGISTRY_KEY, DACL_SECURITY_INFORMATION | UNPROTECTED_DACL_SECURITY_INFORMATION, ((void*)0), ((void*)0), pOldDACL, ((void*)0)) != ERROR_SUCCESS)
     {
         printf("\n[-] Failed to restore the object's DACL %d\n\n", GetLastError());
         ExitProcess(1);
     }
     printf("\n[+] Object's DACL successfully restored");

     FreeSid(pSIDAdmin);

     return 0;
}
